Fix logo pb on mobile

--- a/src/assets/scss/components/_sponsors.scss
+++ b/src/assets/scss/components/_sponsors.scss
@@ -8,3 +8,13 @@
   border: none;
   margin: 1em;
 }
+
+.gold img {
+  width: 300px;
+  max-width: 100%;
+}
+
+.silver img {
+  width: 200px;
+  max-width: 100%;
+}
